# ostt

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  PROMPT.md  README.md  dist-workspace.toml  flake.nix  loop.sh
.github/workflows/: all-contributors.yml  release.yml
environments/: ostt.toml
environments/gnome/: README.md
environments/hyprland/: README.md  ghostty-float.conf  ostt-float.sh
environments/kde/: README.md
environments/macOS/: README.md  init.lua
specs/: Generate Implementation Plan — Prompt.md  README.md
specs/Phase 1/: 1.1 — Action Config Types.md  1.2 — Input Resolution.md  PLAN.md  SESSION.md
specs/Phase 2/: 2.1 — Chat Completions Client.md  PLAN.md  SESSION.md
specs/Phase 3/: 3.1 — Bash Action Executor.md  3.2 — Action Dispatcher.md  PLAN.md  SESSION.md
specs/Phase 4/: 4.1 — Action Picker TUI.md  PLAN.md  SESSION.md
specs/Phase 5/: 5.1 — Process Subcommand.md  5.2 — Process Flag on Record, Transcribe, Retry.md  PLAN.md  SESSION.md
specs/Phase 6/: 6.1 — History Schema for Processed Results.md  6.1 — Processing Animation with Status Label.md  PLAN.md  SESSION.md
specs/Phase 7/: 7.1 — Processing Animation with Status Label.md  7.1 — Update README.md  7.2 — Update CHANGELOG.md  7.3 — Mouse Hover Highlight.md  PLAN.md  SESSION.md
specs/Phase 8/: 8.1 — Update README.md  8.2 — Update CHANGELOG.md
specs/_template/: README.md
specs/local-models/Phase 1 - Provider & Plumbing/: 1.1 - Local Provider Variant + Feature Flag.md  1.2 - whisper-rs Integration & Model Loading.md  PLAN.md  SESSION.md
specs/local-models/Phase 2 - Model Management TUI/: 2.1 - Model Registry & Storage.md  2.2 - Model Download Engine.md  2.3 - Model Management TUI.md  PLAN.md  SESSION.md
specs/local-models/Phase 3 - Config & Auth/: 3.1 - Local Provider Config Types.md  3.2 - Auth Flow & First-Time Setup.md  PLAN.md  SESSION.md
specs/process-command/: README.md
specs/process-command/Phase 1/: 1.1 — Action Config Types.md  1.2 — Input Resolution.md  PLAN.md  SESSION.md
specs/process-command/Phase 2/: PLAN.md  SESSION.md
specs/process-command/Phase 3/: 3.2 — Action Dispatcher.md  PLAN.md  SESSION.md
specs/process-command/Phase 4/: PLAN.md  SESSION.md
specs/process-command/Phase 5/: 5.1 — Process Subcommand.md  PLAN.md  SESSION.md
specs/process-command/Phase 6/: PLAN.md  SESSION.md
src/: app.rs  clipboard.rs  lib.rs  logging.rs
src/auth/: berget_api.rs  mod.rs  oauth2.rs
src/commands/: auth.rs  config.rs  history.rs  keywords.rs  launch.rs  list_devices.rs  local_models.rs  logs.rs  mod.rs  model.rs  models_tui.rs  process.rs  record.rs  replay.rs  retry.rs  transcribe.rs
src/config/: file.rs  mod.rs  secrets.rs
src/history/: history_view.rs  mod.rs  storage.rs  ui.rs
src/keywords/: keywords_view.rs  mod.rs  ui.rs
src/model/: cloud_model_info_view.rs  cloud_model_view.rs  mod.rs  model_provider_view.rs  model_view.rs  no_cloud_providers_view.rs
src/process/: ai.rs  bash.rs  execute.rs  input.rs  mod.rs  picker.rs  process_view.rs
src/recording/: audio.rs  ffmpeg.rs  mod.rs  ostt_tui.rs  recording_history.rs  ui.rs
src/setup/: mod.rs  version.rs
src/transcription/: animation.rs  local_models.rs  mod.rs  model.rs  provider.rs
src/ui/: components.rs  error.rs  mod.rs
(+52 files in other folders)
