[package]
name = "ostt"
version = "0.0.8"
edition = "2021"
description = "Open Speech-to-Text recording tool with real-time volume metering and transcription"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/kristoferlund/ostt"
homepage = "https://github.com/kristoferlund/ostt"

[dependencies]
# Terminal UI
ratatui = "0.29.0"
crossterm = "0.28.1"
cliclack = "0.3.0"
console = "0.15.8"
ctrlc = "3.5.1"
tui-input = "0.14.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Audio capture and processing
cpal = "0.16.0"
hound = "3.5.1"
rustfft = "6.2.0"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Config and serialization
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.12"
dirs = "6.0.0"
anyhow = "1.0.86"
regex = "1.10"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
tracing-appender = "0.2.3"

# API calls for transcription
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
urlencoding = "2.1.3"

# Database for history
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3.18"

# Unix system calls (Linux-only for ALSA warning suppression)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "s"
strip = true

# Metadata for cargo-dist
[package.metadata.dist]
tap = "kristoferlund/ostt"

[package.metadata.deb]
name = "ostt"
maintainer = "Kristofer Lund <kristoferlund@users.noreply.github.com>"
copyright = "2024, Kristofer Lund"
license-file = ["LICENSE", "4"]
extended-description = """\
ostt (Open Speech-to-Text) is an interactive terminal-based audio recording \
and speech-to-text transcription tool. Record via microphone with real-time \
waveform visualization and transcribe using your choice of AI provider.\
"""
depends = "$auto, ffmpeg"
recommends = "wl-clipboard | xclip"
section = "sound"
priority = "optional"
assets = [
    ["target/release/ostt", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ostt/README.md", "644"],
    ["LICENSE", "usr/share/doc/ostt/LICENSE", "644"],
]

[package.metadata.generate-rpm]
name = "ostt"
license = "MIT"
summary = "Open Speech-to-Text: Terminal recording and transcription tool"
description = """\
ostt is an interactive terminal-based audio recording and speech-to-text \
transcription tool. Record via microphone with real-time waveform visualization \
and transcribe using your choice of AI provider (OpenAI, Deepgram, Groq, \
AssemblyAI, DeepInfra, Berget).\
"""
requires = ["ffmpeg"]
recommends = ["wl-clipboard"]

[[package.metadata.generate-rpm.assets]]
source = "target/release/ostt"
dest = "/usr/bin/ostt"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/ostt/README.md"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/doc/ostt/LICENSE"
mode = "0644"
doc = true
